# em-refactor

./: .gitignore  .travis.yml  Cargo.toml  README.md  rust-toolchain  test.sh
em-refactor-cli/: Cargo.toml
em-refactor-cli/src/: arg_mappings.rs  cmd_executer.rs  driver.rs  invocation_error.rs  main.rs
em-refactor-cli/tests/: cli_tests.rs  refactoring_extract_block_items.rs  refactoring_extract_block_vars.rs  refactoring_introduce_closure_cf.rs
em-refactor-cli/tests/cli_tests_utils/: mod.rs
em-refactor-cli/tests/test_case/: mod.rs
em-refactor-experiments/: Cargo.toml
em-refactor-experiments/src/: main.rs
em-refactor-experiments/src/exp/: experiments_runner.rs  experiments_runner_cmd.rs  report.rs  stopwatch.rs  test_result.rs
em-refactor-lib-types/: Cargo.toml
refactor-examples/crates/multi_root_overlap/: Cargo.toml
refactor-experiments/: Cargo.toml
refactor-experiments/src/: main.rs
refactor-experiments/src/exp/: .gitignore  experiments_config.rs  experiments_runner.rs  experiments_runner_cmd.rs  file_logger.rs  logger.rs  mod.rs  report.rs  stdout_logger.rs  stopwatch.rs  test_result.rs
refactor-lib/: .gitignore  Cargo.toml  rust-toolchain  test.sh
refactor-lib/.cargo/: config
refactor-lib/examples/extract-method-01/: extract-method-01.rs
refactor-lib/examples/extract-method-01/project/: Cargo.toml
refactor-lib/src/: arg_mappings.rs  ast_visitor.rs  change.rs  change_serialize.rs  driver.rs  file_loader.rs  hir_visitor.rs  lib.rs  main.rs  my_refactor_callbacks.rs  refactor_args.rs  refactor_args_parser.rs  refactor_definition.rs  refactor_definition_parser.rs  refactor_invocation.rs  rustc_pass.rs  rustc_rerun.rs
refactor-lib/src/candidates/: box_field_candidate_collector.rs  extract_block_candidate_collector.rs  extract_method_candidate_collector.rs  query_candidates.rs
refactor-lib/src/extra/: box_field_candidate_collector.rs  candidates.rs  extract_block_candidate_collector.rs  macro_res.rs  mod.rs  query_candidates.rs  type_lookup.rs
refactor-lib/src/output_types/: change.rs  mod.rs
refactor-lib/src/refactoring_invocation/: arg_mappings.rs  ast_context.rs  change.rs  change_mappings.rs  file_loader.rs  mod.rs  my_refactor_callbacks.rs  refactor_definition.rs  refactor_definition_parser.rs  run_refactoring.rs  rustc_pass.rs  rustc_rerun.rs  rustc_utils.rs  source_map_context.rs  ty_context.rs  types.rs
refactor-lib/src/refactorings/: ast_visitor.rs  expr_use_visit.rs  extract_method.rs  hir_visitor.rs  mod.rs  my_early_lint.rs  my_late_lint.rs  my_visit.rs  stmts_visitor.rs  utils.rs
refactor-lib/src/refactorings/box_field/: binds_to_field_collector.rs  box_named_field.rs  box_tuple_field.rs  field_collector.rs  function_body_collector.rs  mod.rs  (+9 more)
refactor-lib/src/test_utils/: mod.rs
refactor-lib/tests/: cli_tests.rs  cli_tests_utils.rs  experiments.rs  extract_method_tests.rs  main_tests.rs  refactoring_box_field.rs  refactoring_box_named_field.rs  refactoring_close_over_variables.rs  refactoring_convert_closure_to_local_function.rs  refactoring_extract_block_grammar_tests.rs  refactoring_extract_block_ownership.rs  refactoring_extract_block_ownership_tests.rs  refactoring_extract_block_tests.rs  refactoring_extract_block_vars_tests.rs  refactoring_extract_method_tests.rs  refactoring_inline_macro.rs  refactoring_introduce_closure.rs  refactoring_introduce_closure_cf.rs  refactoring_introduce_closure_grammar.rs  refactoring_pull_up_item_declaration.rs  refactoring_pull_up_item_declarations.rs  test_before_and_after.rs  test_case.rs
refactor-lib/tests/cli_tests_utils/: mod.rs
refactor-lib/tests/data/: README.md
refactor-lib/tests/exp/: experiments_config.rs  experiments_runner.rs  experiments_runner_cmd.rs  experiments_struct.rs  mod.rs  projects.json  test_result.rs
refactor-lib/tests/extract_method/: borrowed_mut_value.json  borrowed_mut_value.rs  borrowed_mut_value_after.rs  extract-method-01.after.rs  owned_mut_value.rs  owned_mut_value_after.rs  owned_value.rs  owned_value_after.rs
refactor-lib/tests/test_case/: mod.rs
(+757 files in other folders)
