[package]
name = "em-refactor-lib-types"
version = "0.1.0"
authors = ["Per Ove Ringdal <perori@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"