[package]
name = "refactor-experiments"
version = "0.1.0"
authors = ["Per Ove Ringdal <perori@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.0"
itertools = "0.9"
log = {version = "0.4", features = ["std"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"

refactor-lib-types = { path = "../refactor-lib-types" }