[package]
name = "my_refactor"
version = "0.1.0"
authors = ["Per Ove Ringdal <perori@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-my-refactor"
test = false
path = "src/main.rs"

[[bin]]
name = "my-refactor-driver"
test = false
path = "src/driver.rs"

[dependencies]

[dev-dependencies]
assert_cli = "0.6.3"
