[package]
name = "refactor-lib"
version = "0.1.0"
authors = ["Per Ove Ringdal <perori@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true

[dependencies]
if_chain = "1.0.0"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
refactor-lib-types = { path = "../refactor-lib-types" }

[dev-dependencies]
assert_cmd = "0.12"
predicates = "1.0"
quote = "1.0"
regex = "1"
serde_json = "1.0"
tempfile = "3.1"